-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.2.0
-
Windows Vista 64bit, MSVC2010/64bit
-
ff9fff7eb3dcd2feffb4fb7e4b8b532096b4279e
QML Designer crash when opening main.qml of RtmClient project (link in private comment below)
0 QHash<QmlDesigner::ModelNode,QmlDesigner::NodeInstance>::findNode qhash.h 882 0x7feec488576
1 QHash<QmlDesigner::ModelNode,QmlDesigner::NodeInstance>::contains qhash.h 872 0x7feec481600
2 QmlDesigner::NodeInstanceView::hasInstanceForNode nodeinstanceview.cpp 551 0x7feec4748b4
3 QmlDesigner::QmlModelView::hasInstanceForModelNode qmlmodelview.cpp 292 0x7feec536965
4 QmlDesigner::QmlModelNodeFacade::isValid qmlmodelnodefacade.cpp 51 0x7feec54e974
5 QmlDesigner::PropertyEditor::NodeType::setup propertyeditor.cpp 174 0x7feec5a70c7
6 QmlDesigner::PropertyEditor::resetView propertyeditor.cpp 702 0x7feec5aee1d
7 QmlDesigner::PropertyEditor::setupPanes propertyeditor.cpp 523 0x7feec5ac24e
8 QmlDesigner::PropertyEditor::qt_metacall moc_propertyeditor.cpp 86 0x7feec6ca577
9 QMetaObject::metacall qmetaobject.cpp 238 0x70b85864
10 QMetaObject::activate qobject.cpp 3278 0x70ba2120
11 QTimer::timeout moc_qtimer.cpp 135 0x70c35ed0
12 QTimer::timerEvent qtimer.cpp 273 0x70bb21f5
13 QObject::event qobject.cpp 1182 0x70b9d532
14 QApplicationPrivate::notify_helper qapplication.cpp 4462 0x6f6c0336
15 QApplication::notify qapplication.cpp 3862 0x6f6bd431
16 QCoreApplication::notifyInternal qcoreapplication.cpp 787 0x70b79f1a
17 QCoreApplication::sendEvent qcoreapplication.h 215 0x70b80483
18 QEventDispatcherWin32Private::sendTimerEvent qeventdispatcher_win.cpp 645 0x70bcd1e7
19 qt_internal_proc qeventdispatcher_win.cpp 503 0x70bccc42
20 UserCallWinProcCheckWow USER32 0x775cd53e
21 DispatchMessageWorker USER32 0x775cd7c6
22 QEventDispatcherWin32::processEvents qeventdispatcher_win.cpp 810 0x70bce03e
23 QGuiEventDispatcherWin32::processEvents qapplication_win.cpp 1170 0x6f7aa7c5
24 QCoreApplication::processEvents qcoreapplication.cpp 980 0x70b7a3a9
25 QmlDesigner::PropertyEditor::NodeType::setup propertyeditor.cpp 214 0x7feec5a8169
26 QmlDesigner::PropertyEditor::resetView propertyeditor.cpp 682 0x7feec5aeab7
27 QmlDesigner::PropertyEditor::timerEvent propertyeditor.cpp 583 0x7feec5ad460
28 QObject::event qobject.cpp 1182 0x70b9d532
29 QApplicationPrivate::notify_helper qapplication.cpp 4462 0x6f6c0336
30 QApplication::notify qapplication.cpp 3862 0x6f6bd431
31 QCoreApplication::notifyInternal qcoreapplication.cpp 787 0x70b79f1a
32 QCoreApplication::sendEvent qcoreapplication.h 215 0x70b80483
33 QEventDispatcherWin32Private::sendTimerEvent qeventdispatcher_win.cpp 645 0x70bcd1e7
34 qt_internal_proc qeventdispatcher_win.cpp 503 0x70bccc42
35 UserCallWinProcCheckWow USER32 0x775cd53e
36 DispatchMessageWorker USER32 0x775cd7c6
37 QEventDispatcherWin32::processEvents qeventdispatcher_win.cpp 810 0x70bce03e
38 QGuiEventDispatcherWin32::processEvents qapplication_win.cpp 1170 0x6f7aa7c5
39 QEventLoop::processEvents qeventloop.cpp 150 0x70b77284
40 QEventLoop::exec qeventloop.cpp 201 0x70b77409
41 QCoreApplication::exec qcoreapplication.cpp 1064 0x70b7a5dc
42 QApplication::exec qapplication.cpp 3737 0x6f6bcfd8
43 main main.cpp 363 0x13f6b772d
44 __tmainCRTStartup crtexe.c 555 0x13f6bc9ac
45 mainCRTStartup crtexe.c 371 0x13f6bc7fe
46 BaseThreadInitThunk kernel32 0x7769be3d
47 RtlUserThreadStart ntdll 0x777d6611
Output:
formLayerItem QGraphicsObject(0xd9dd6f0, parent = 0x0, pos = QPointF(0, 0) , z =
1 , flags = ( ) )
manipulatorLayerItem QGraphicsObject(0xd9dd990, parent = 0x0, pos = QPointF(0, 0
) , z = 1 , flags = ( ) )
QmlDesigner: Log file is: "C:/Users/FRIEDE~1/AppData/Local/Temp/qmldesigner-logg
er-2011-03-17T12-00-11-KD4520.txt"
Skipping invalid expression property "Component.onCompleted" for node type "User
Authentication"
Skipping invalid expression property "Component.onCompleted" for node type "Task
Connection"
qrc:/stateseditor/stateslist.qml:136:17: QML Image: Bilddaten konnten nicht erha
lten werden: image://qmldesigner_stateseditor/1-2