QmlDesigner.model: crashfix

We have to check if there actually is a nodeInstanceView

Task-number: QTCREATORBUG-4126